--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
-<body>
 
-<div class="jumbotron">
-    <div id="name"><h1>Sarah Maples</h1></div>
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="collapse navbar-collapse" id="navbarNav">
+            <a class="navbar-brand" href="#">Sarah Maples</a>
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
@@ -21,7 +20,7 @@
         </ul>
     </div>
 </nav>
-</div>
+<br><br><br><br>
 
 <div class="container">
     <form>
@@ -35,8 +34,11 @@
             <label>Message:</label>
             <input type="text" class="form-control" placeholder="Your message here">
         </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
+<br><br><br><br>
+<footer id="foot">Copyright &copy;</footer>
 
 </body>
 </html>
