--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-<div class="jumbotron">
-    <div id="name"><h1>Sarah Maples</h1></div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="collapse navbar-collapse" id="navbarNav">
+            <a class="navbar-brand" href="#">Sarah Maples</a>
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
@@ -21,9 +20,62 @@
         </ul>
     </div>
 </nav>
-</div>
+<br><br><br><br>
 
-you have reached the portfolio page!
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-lg-4">
+            <div class="card" style="width:202px">
+                <img class="card-img-top img-fluid" src="images/kitten.jpg" style="width:200px">
+                <div class="card-body" style="text-align: center;background:#343a40">
+                    <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
+                </div>
+            </div>
+        </div> 
+        <div class="col-sm-12 col-lg-4">
+            <div class="card" style="width:202px">
+                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+                <div class="card-body" style="text-align: center;background:#343a40">
+                    <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
+                </div>
+            </div>
+        </div> 
+        <div class="col-sm-12 col-lg-4">
+            <div class="card" style="width:202px">
+                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+                <div class="card-body" style="text-align: center;background:#343a40">
+                    <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
+                </div>
+            </div>
+        </div>         
+        <div class="col-sm-12 col-lg-4">
+            <div class="card" style="width:202px">
+                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+                <div class="card-body" style="text-align: center;background:#343a40">
+                    <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
+                </div>
+            </div>
+        </div>         
+        <div class="col-sm-12 col-lg-4">
+            <div class="card" style="width:202px">
+                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+                <div class="card-body" style="text-align: center;background:#343a40">
+                    <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
+                </div>
+            </div>
+        </div>         
+        <div class="col-sm-12 col-lg-4">
+            <div class="card" style="width:202px">
+                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+                <div class="card-body" style="text-align: center;background:#343a40">
+                    <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
+                </div>
+            </div>
+        </div> 
+    </div>
+</div>
+<br><br><br><br>
+<footer id="foot">Copyright &copy;</footer>
 
 </body>
 </html>
