fixed media queries

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="row">
     <div class="col">
-        <img class="img-fluid float-left" src="images/profPic.jpg" style="height:400px" id="pic">
+        <img class="img-fluid float-left" src="images/profPic.jpg" id="pic">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et sapien vitae nulla congue efficitur sit amet sed odio. Maecenas tempus mattis fringilla. Suspendisse id nunc molestie, ullamcorper augue faucibus, iaculis neque. Integer condimentum fermentum egestas. Proin condimentum ac lacus vitae aliquet. Praesent nulla magna, pulvinar sed tincidunt ac, mattis ut sapien. Praesent efficitur pulvinar luctus.</p>
         <p>Mauris in fermentum elit. Pellentesque dignissim vel orci a sollicitudin. Ut lobortis luctus libero, a fringilla diam iaculis a. Integer quis porta tellus, vitae hendrerit est. Pellentesque in orci mollis, tincidunt tellus porttitor, pellentesque sem. Integer a tortor non sem imperdiet bibendum. Sed pulvinar magna sed volutpat suscipit.</p>
