--- a/portfolio.html
+++ b/portfolio.html
@@ -25,48 +25,48 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-lg-4">
-            <div class="card" style="width:202px">
-                <img class="card-img-top img-fluid" src="images/kitten.jpg" style="width:200px">
+            <div class="card" style="width:60%">
+                <img class="card-img-top img-fluid" src="images/kitten.jpg">
                 <div class="card-body" style="text-align: center;background:#343a40">
                     <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
                 </div>
             </div>
         </div> 
         <div class="col-sm-12 col-lg-4">
-            <div class="card" style="width:202px">
-                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+            <div class="card" style="width:60%">
+                <img class="card-img-top" src="images/kitten.jpg">
                 <div class="card-body" style="text-align: center;background:#343a40">
                     <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
                 </div>
             </div>
         </div> 
         <div class="col-sm-12 col-lg-4">
-            <div class="card" style="width:202px">
-                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+            <div class="card" style="width:60%">
+                <img class="card-img-top" src="images/kitten.jpg">
                 <div class="card-body" style="text-align: center;background:#343a40">
                     <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
                 </div>
             </div>
         </div>         
         <div class="col-sm-12 col-lg-4">
-            <div class="card" style="width:202px">
-                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+            <div class="card" style="width:60%">
+                <img class="card-img-top" src="images/kitten.jpg">
                 <div class="card-body" style="text-align: center;background:#343a40">
                     <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
                 </div>
             </div>
         </div>         
         <div class="col-sm-12 col-lg-4">
-            <div class="card" style="width:202px">
-                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+            <div class="card" style="width:60%">
+                <img class="card-img-top" src="images/kitten.jpg">
                 <div class="card-body" style="text-align: center;background:#343a40">
                     <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
                 </div>
             </div>
         </div>         
         <div class="col-sm-12 col-lg-4">
-            <div class="card" style="width:202px">
-                <img class="card-img-top" src="images/kitten.jpg" style="width:200px">
+            <div class="card" style="width:60%">
+                <img class="card-img-top" src="images/kitten.jpg">
                 <div class="card-body" style="text-align: center;background:#343a40">
                     <h4 class="card-title"><a href="#" style="color:aliceblue">Kitten</a></h4>
                 </div>
