--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
             <a class="navbar-brand" href="#">Sarah Maples</a>
         <ul class="navbar-nav">
@@ -22,7 +25,7 @@
 </nav>
 <br><br><br><br>
 
-<div class="container">
+<div class="container-fluid">
     <form>
         <div class="form-group">
             <label>Name:</label>    
