--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <!--the header should include my name as well as links to the 3 different pages on my site-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <a class="navbar-brand" href="#">Sarah Maples</a>
     <ul class="navbar-nav">
@@ -27,18 +30,20 @@
 <br><br><br><br>
 
 
-<div class="container" id="info">
+<div class="container-fluid" id="info">
 <div class="row"><div class="col"><h2>About Me</h2></div></div><br>
 
 <div class="row">
-    <div class="col">
-        <img class="img-fluid float-left" src="images/profPic.jpg" id="pic">
-
+    <div class="col-xs-12 col-md-6 col-lg-4">
+        <img class="img-fluid" src="images/profPic.jpg" id="pic">
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et sapien vitae nulla congue efficitur sit amet sed odio. Maecenas tempus mattis fringilla. Suspendisse id nunc molestie, ullamcorper augue faucibus, iaculis neque. Integer condimentum fermentum egestas. Proin condimentum ac lacus vitae aliquet. Praesent nulla magna, pulvinar sed tincidunt ac, mattis ut sapien. Praesent efficitur pulvinar luctus.</p>
         <p>Mauris in fermentum elit. Pellentesque dignissim vel orci a sollicitudin. Ut lobortis luctus libero, a fringilla diam iaculis a. Integer quis porta tellus, vitae hendrerit est. Pellentesque in orci mollis, tincidunt tellus porttitor, pellentesque sem. Integer a tortor non sem imperdiet bibendum. Sed pulvinar magna sed volutpat suscipit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et sapien vitae nulla congue efficitur sit amet sed odio. Maecenas tempus mattis fringilla. Suspendisse id nunc molestie, ullamcorper augue faucibus, iaculis neque. Integer condimentum fermentum egestas. Proin condimentum ac lacus vitae aliquet. Praesent nulla magna, pulvinar sed tincidunt ac, mattis ut sapien. Praesent efficitur pulvinar luctus.</p>
         <p>Mauris in fermentum elit. Pellentesque dignissim vel orci a sollicitudin. Ut lobortis luctus libero, a fringilla diam iaculis a. Integer quis porta tellus, vitae hendrerit est. Pellentesque in orci mollis, tincidunt tellus porttitor, pellentesque sem. Integer a tortor non sem imperdiet bibendum. Sed pulvinar magna sed volutpat suscipit.</p>
     </div>
+</div>
 </div>
 </div>
 <br><br><br><br>
